web-app/css/main.css
/* ... */
.input-fail {
    position: absolute;
    float: right;
    right: 2.25em;
    top: 4.3em;
    background: #F6E5E6;
}

.input-fail.pi-phone-num-err {
    top: inherit;
    bottom: 5.25em;
    right: 3em;
}

.icon .icon-error {
    font-size: 16px;
}

.icon-error.ellucian-font,
.icon-caret-down.ellucian-font {
    font-family: ellucian;
}

.text-input-field:focus,
input.hasMultiCalendarPicker.pi-date-input:focus,
.radio-txt-input:focus {
    border-style: solid;
    border-width: 1px;
    border-color: #206E9F;
    box-shadow: 0px 2px #CBE2E8 inset;
    color: #4F585F;
}

.dialog-hdr1 {
    font-size: 30px;
    margin: 0px;
    padding: 1em 1em 0.5em;
}

.pi-modal.modal {
    margin-top: 50px;
    overflow-x: hidden
}

.pi-modal .modal-dialog {
    padding: 0;
    height: 100%;
}

.pi-modal .modal-content {
    height: 100%;
    border-radius: 0px;
    overflow-y: auto;
}

p.response-err {
    padding-left: 15px;
    padding-right: 15px;
    float: left;
    clear: left;
}

.pad-dialog-lr.row {
    margin: 0px;
}

.dialog-footer-margin {
    margin-top: 1.5em;
}

.dialog-hdr2 {
    margin: 0px;
    float: right;
    width: 100%;
}

button.closebtn {
    color: #4f585f;
    opacity: 1;
    font-size: 14px;
    font-family: open-sans-semi-bold;
    background: url('../images/close.svg') 50% 50% no-repeat;
    padding: 2.85em;
    display: block;
    border: none;
    float: right;
}

.modal-footer-container {
    height: 100%;
}

.pi-modal-footer {
    display: table;
    padding: 1px 0px 0px;
    width: 100%;
}

.dialog-btn {
    box-sizing: border-box;
    display: table-cell;
    text-align: center;
    vertical-align: middle;
    font-size: 18px;
    overflow: auto;
    border-style: none;
    background: white;
    color: #206E9F;
    line-height: normal;
    padding: 1em;
}


.desktop-save .lbl-text {
    width: 98%;
    display: inline-block\9; /* \9 hack - make this IE only */
    line-height: 20px;
}

.one-btn-layout {
    width: 100%;
}

.two-btn-layout {
    width: 50%;
}

.cancel-btn {
    border-top: 1px solid #869FB1;
}

.cancel-btn.one-btn-layout {
    width: 0px;
    display: none;
}

.save-btn {
    border-top: 1px solid #206E9F;
    background: #206E9F;
    color: white;
    box-shadow: 0px -4px #0C5482 inset;
}

.save-btn[disabled] {
    color: #869FB1;
}

.buttons-desktop-save {
    padding: 0.5em 1.75em 0.5em 0em;

    /* IE 10 flex */
    display: -ms-flexbox;

    display: flex;
}

.buttons-desktop-save .save-btn {
    color: #fff;
    background-color: #428bca;
    border-color: #357ebd;
    padding: 0.438em 1.5em;
    float: right;
    margin: 0em 0em 0em 0.625em;
}

.buttons-desktop-save .save-btn[disabled] {
    color: #C6DFF1;
    opacity: 0.65;
}

.mid-dash {
    float: left;
    width: 100%;
    border-left: 1px solid rgb(0, 0, 0);
    padding: 0.25em 1em;
    margin: 0.75em 0em;
}

.text-input-field:disabled {
    background-color: #F1F4F6;
}


/************************/
/* Person Detail Layout */
/************************/

.overview-line {
    margin-top: 15px;
}

.overview-line.email {
    word-break: break-all;
}

.overview-name {
    font-size: 1.5em;
}

.pi-profile-image {
    vertical-align: middle;
}

.pi-profile-image > svg {
    width: 128px;
    margin-bottom: -15px;
}

.details-wrapper {
    overflow: hidden;
}

.details-section {
    margin: 15px 0;
    padding: 15px 15px 0px 15px;
    border-bottom: 4px solid #ddd;
    overflow: hidden;
    background: white;
}

.details-section.overview {
    float: left;
    width: 280px;
    padding-bottom: 15px;
    margin-right: 15px;
    text-align: center;
}

.details-section-heading {
    float: left;
}

.details-section-heading > h2 {
    font-size: 16px;
    font-weight: bold;
    margin: 0;
}

.pi-title-divider,
.pi-overview-divider {
    width: 50px;
    height: 1px;
}

.pi-overview-divider {
    margin-left: auto;
    margin-right: auto;
}

.pi-title-divider span,
.pi-overview-divider span {
    border-bottom: 1px solid #BEC5CB;
    width: 100%;
    float: left;
    margin-bottom: 0.675em;
}

.pi-title-divider span {
    margin-top: 1.0em;
}

.pi-overview-divider span {
    margin-top: 1.5em;
}

.overview-divider-spacer {
    height: 25px;
}

.details-section-edit {
    float: right;
}

.address-delete-checkbox {
    float: left;
    padding-right: 8px;
}

.address-detail,
.emergency-contact-detail,
.addtl-details-detail {
    float: left;
}

.email-detail {
    float: left;
    width: 100%;
    word-break: break-all;
}

.item-wrapper,
.emergency-contact-wrapper {
    float: left;
    padding-bottom: 15px;
}

.address-type-view {
    font-weight: bold;
}

.address-date-range {
    float: left;
}

.address-zip {
    padding-left: 10px;
}

.address-last-line {
    float: left;
}

a.delete-address-link {
    padding-left: 15px;
    color: #333;
    text-decoration: none;
    cursor: pointer;
}

.delete-address-link [class^="icon-"] {
    font-size: 18px;
}

.delete-address-link.disabled {
    cursor: not-allowed;
    color: #A0A3A4;
}

.phone-type-view {
    font-weight: bold;
    padding-bottom: 4px;
    float: left;
}

.phone-number-view {
    padding-bottom: 4px;
}

.phone-number-wrapper {
    padding-bottom: 15px;
}

.unlisted {
    padding: 0 5px;
}

span.priority-dot,
span.id-label {
    margin-right: 5px;
}

.pi-phone-num-lbl {
    padding-bottom: 0px;
}

.pi-phone-ctry {
    margin-top: 0.875em;
    width: 20%;
    display: inline-block;
}

.pi-phone-area {
    margin-top: 0.875em;
    width: 20%;
}

.pi-phone-num {
    margin-top: 0.875em;
    width: 35%
}

.pi-phone-extn {
    margin-top: 0.875em;
    width: 23%;
}

/* Icons */
.details-section-edit-link,
a:hover.details-section-edit-link,
a:focus.details-section-edit-link {
    color: #333;
    cursor: pointer;
    text-decoration: none;
}

.details-section-edit-link .icon-edit {
    font-size: 14px;
}
/* ... */

